# MyMCP

./: .env  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  GOLD_STANDARD_BLUEPRINT.md  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci-cd.yml  deploy.yml
backend/: main.py
docs/: architecture.md  mcp_workflow.md
docs/diagrams/: c4_context.md  deployment_pipeline.md  sequence_flow.md
mcp-server/: Dockerfile  list_models.py  requirements-dev.txt  requirements.txt  server.py  test_client.py  test_gemini_agent.py  test_remote.py
mcp-server/tests/: test_math.py
mcp_server/: .dockerignore  Dockerfile  inspect_tool.py  list_models.py  mcp_help.txt  server.py  test_client.py  test_gemini_agent.py  test_remote.py
mcp_server/tests/: test_math.py
terraform/: apis.tf  artifact_registry.tf  outputs.tf  sa.tf  terraform.tfstate  terraform.tfstate.backup  tfplan  variables.tf  versions.tf  workload_identity.tf
tests/: garak_probe.py  garak_wrapper.py  locustfile.py  run_garak.py  test_server.py
