[project]
name = "mymcp"
version = "0.1.0"
description = "MyMCP Project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cyclopts==4.4.6",
    "distro==1.9.0",
    "fastapi==0.115.6",
    "fastmcp==0.4.1",
    "google-api-core==2.29.0",
    "google-auth==2.47.0",
    "google-cloud-aiplatform==1.133.0",
    "google-cloud-bigquery==3.40.0",
    "google-cloud-core==2.5.0",
    "google-cloud-resource-manager==1.16.0",
    "google-cloud-storage==3.8.0",
    "google-crc32c==1.8.0",
    "google-genai==1.58.0",
    "google-resumable-media==2.8.0",
    "googleapis-common-protos==1.72.0",
    "grpc-google-iam-v1==0.14.3",
    "grpcio==1.76.0",
    "grpcio-status==1.76.0",
    "proto-plus==1.27.0",
    "protobuf==6.33.4",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "python-dateutil==2.9.0.post0",
    "rsa==4.9.1",
    "six==1.17.0",
    "sniffio==1.3.1",
    "tenacity==9.1.2",
    "uvicorn==0.34.0",
    "websockets==15.0.1",
]

[tool.ruff]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
lint.select = ["E", "F", "I"]
lint.ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
lint.unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "mutants",
]

line-length = 120

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = ["mutants"]
# ignore_missing_imports = true # Commented out for strict mode compliance, enable if needed


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=server"
testpaths = [
    "tests",
]



[dependency-groups]
dev = [
    "coverage>=7.13.1",
    "locust>=2.43.1",
    "mutmut>=3.4.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.12",
    "types-requests>=2.32.4.20260107",
    "garak>=0.10.0",
]

[tool.semantic_release]
version_variable = [
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "uv build"

[tool.mutmut]
paths_to_mutate = "mcp_server"
runner = "uv run pytest"
tests_dir = "tests"
paths_to_exclude = "mcp_server/venv"
